objects/ASI_CRM_Volume_Potential__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_SG_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Group_Outlet_Type_Name__c</fullName>
        <formula>TEXT(ASI_CRM_SG_Group_Outlet_Type__r.ASI_CRM_SG_Group_Outlet_Name__c)</formula>
        <label>Group Outlet Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Group_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Outlet Type</label>
        <referenceTo>ASI_CRM_Group_Outlet_Type__c</referenceTo>
        <relationshipLabel>Volume Potential Thresholds</relationshipLabel>
        <relationshipName>ASI_CRM_SG_Volume_Potentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Max_Weight__c</fullName>
        <label>Maximum Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Min_Weight__c</fullName>
        <label>Minimum Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Name__c</fullName>
        <label>Volume Potential Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Volume Potential</label>
    <listViews>
        <fullName>ASI_CRM_MY_Volume_Potentials</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <columns>ASI_CRM_SG_External_ID__c</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type_Name__c</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Volume_Potential__c.ASI_CRM_MY_Volume_Potential</value>
        </filters>
        <label>MY Volume Potentials</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_All_Volume_Potential</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Volume_Potential__c.ASI_CRM_VN_Volume_Potential</value>
        </filters>
        <label>All VN Volume Potential</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <columns>ASI_CRM_SG_External_ID__c</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type_Name__c</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V-{00000}</displayFormat>
        <label>Volume Potential No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volume Potentials</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_Volume_Potential</fullName>
        <active>true</active>
        <label>ASI CRM MY Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Volume_Potential</fullName>
        <active>true</active>
        <label>ASI CRM SG Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Volume_Potential</fullName>
        <active>true</active>
        <label>ASI CRM TH Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Volume_Potential</fullName>
        <active>true</active>
        <label>ASI CRM TW Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Volume_Potential</fullName>
        <active>true</active>
        <label>ASI CRM VN Volume Potential</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>